--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@ body {
 	visibility: visible;
 }
 		</style>
-		<link id='-gd-engine-icon' rel='icon' type='image/png' href='testexport.icon.png' />
-<link rel='apple-touch-icon' href='testexport.apple-touch-icon.png'/>
-
+		<link id='-gd-engine-icon' rel='icon' type='image/png' href='index.icon.png' />
+<link rel='apple-touch-icon' href='index.apple-touch-icon.png'/>
+<script src="coi-serviceworker.js">
+</script>
 	</head>
 	<body>
 		<canvas id="canvas">
@@ -135,9 +136,9 @@ body {
 			<div id="status-notice" class="godot" style="display: none;"></div>
 		</div>
 
-		<script src="testexport.js"></script>
+		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"testexport","experimentalVK":false,"fileSizes":{"testexport.pck":10674016,"testexport.wasm":49219187},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":10674160,"index.wasm":49219187},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
